# mask_conditioned_pix2pix_turbo

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
configs/: infer.yaml  train.yaml
data/: __init__.py  dataset.py  mask_utils.py  transforms.py
losses/: __init__.py  boundary.py  masked_losses.py  perceptual.py
models/: __init__.py  lora.py  mask_conditioned_turbo.py  text_embedding.py  unet_utils.py
scripts/: benchmark_vram.py  build_metadata.py  download_base_model.py  export_text_embedding.py  infer.py  split_dataset.py  split_pairs.py  train.py  validate.py
tests/: test_dataset.py  test_inference_smoke.py  test_mask_utils.py  test_text_embedding.py  test_unet_channels.py
