[project]
name = "preparedata"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.30.0",
    "diffusers>=0.30.0",
    "huggingface-hub",
    "imgviz>=2.0.0",
    "lpips>=0.1.4",
    "numpy",
    "onnx>=1.12.0,<2.0.0",
    "onnxruntime-gpu<1.27",
    "onnxslim>=0.1.82",
    "opencv-python<5",
    "pillow",
    "pycocotools>=2.0.7",
    "PySide6",
    "PyYAML>=6.0",
    "pytest>=8.0.0",
    "sam-2 @ git+https://github.com/facebookresearch/sam2.git",
    "tensorboard>=2.16.0",
    "torch",
    "torchaudio",
    "torchvision",
    "transformers>=4.41.0",
    "tqdm",
    "ultralytics>=8.4.84",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
